feat: creacion de galeria

--- a/Proyecto 1/Contacto.html
+++ b/Proyecto 1/Contacto.html
@@ -49,10 +49,10 @@
           <h2>Contacto</h2>
           <p>Puedes contactarnos a través de los siguientes medios:</p>
           <ul>
-            <li><img src="Imagenes/correo.jpg" alt=""  class="logo"> info@quintasenalquiler.com </li>
-            <li><img src="Imagenes/w.jpg" alt="" class="logo"> 1122334455</li>
-            <li><img src="Imagenes/facebook.jpg" alt="" class="logo"> seguinos en facebook</li>
-            <li><img src="Imagenes/instagram.jpg" alt="" class="logo"> encontranos en instagram</li>
+            <li><img src="img/contacto/correo.jpg" alt=""  class="logo"> info@quintasenalquiler.com </li>
+            <li><img src="img/contacto/w.jpg" alt="" class="logo"> 1122334455</li>
+            <li><img src="img/contacto/facebook.jpg" alt="" class="logo"> seguinos en facebook</li>
+            <li><img src="img/contacto/instagram.jpg" alt="" class="logo"> encontranos en instagram</li>
           </ul>
     </div>
 </section>
