--- a/Proyecto 1/Serviciosytarifas.html
+++ b/Proyecto 1/Serviciosytarifas.html
@@ -75,7 +75,7 @@
 
  <section class="pago">
     
-   <img src="imagenes/medios de pago.png" alt="medios de pago">
+   <img src="img/servicios/medios-de-pago.png" alt="medios de pago">
 
 </section>
 
