--- a/Proyecto 1/index.html
+++ b/Proyecto 1/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Quintas Disponibles</a></li>
+                <li><a href="galeria.html">Quintas Disponibles</a></li>
                 <li><a href="#">Servicios y Tarifas</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
