--- a/Proyecto 1/galeria.html
+++ b/Proyecto 1/galeria.html
@@ -505,7 +505,7 @@
         <div class="informacion-footer">
             <div class="iconos-footer">
                 <h2>Alquiler de Casas</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores praesentium neque similique, dolor eveniet nostrum, impedit a eos soluta et eum reiciendis non sint, omnis qui velit provident inventore exercitationem?</p>
+                <p>Lorem, ipsum dolor </p>
                 <div class="iconos-footer">
                     <a href=""><img src="./iconos/facebook.svg" alt=""></a>
                     <a href=""><img src="./iconos/instagram.svg" alt=""></a>
