--- a/Proyecto 1/galeria.html
+++ b/Proyecto 1/galeria.html
@@ -329,7 +329,7 @@
             <div class="alqui">
                 <div class="casa-alqui">
                     <img src="./img/galeria/house-1237469.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5 >Casa de 5 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -348,7 +348,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/house-5017489.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 6 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -386,7 +386,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/9eff22754d980526dfcc790f22e94b47.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 5 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -405,7 +405,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/house-in-the-green-1493723.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 6 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -424,7 +424,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/country-house-385372.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 8 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -443,7 +443,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/single-family-home-2142476.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 5 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -481,7 +481,7 @@
                 </div>
                 <div class="casa-alqui">
                     <img src="./img/galeria/pexels-bianca-1560065.jpg" alt="">
-                    <h5>Casa de 4 ambientes</h5>
+                    <h5>Casa de 9 ambientes</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae repellendus ad illo blanditiis aliquam in, quam cumque laboriosam quos. Quia optio, ipsam tempora minima perspiciatis id architecto minus neque quaerat.</p>
                     <div class="iconos-alquileres">
                         <div class="icon-cas">
@@ -506,7 +506,7 @@
             <div class="iconos-footer">
                 <h2>Alquiler de Casas</h2>
                 <p>Lorem, ipsum dolor </p>
-                <div class="iconos-footer">
+                <div class="icono-footer">
                     <a href=""><img src="./iconos/facebook.svg" alt=""></a>
                     <a href=""><img src="./iconos/instagram.svg" alt=""></a>
                     <a href=""><img src="./iconos/twitter.svg" alt=""></a>
@@ -514,7 +514,7 @@
                 </div>
             </div>
             <div class="lista-footer">
-                <ul class="lista-fo">
+                <ul class="lista-fo" id="pie">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Alquiler</a></li>
                     <li><a href="#">Quienes somos</a></li>
@@ -522,6 +522,7 @@
                 </ul>
             </div>
         </div>
+        <p>&copy; 2023 Quintas en Alquiler</p>
     </footer>
     <script src="./js/galeria.js"></script>
 </body>
