--- a/Proyecto 1/index.html
+++ b/Proyecto 1/index.html
@@ -11,10 +11,10 @@
         <h1>Quintas en Alquiler</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Quintas Disponibles</a></li>
-                <li><a href="#">Servicios y Tarifas</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Servicios.html">Servicios y Tarifas</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -22,12 +22,17 @@
     <section class="hero">
         <h2>Bienvenido a Nuestras Quintas en Alquiler</h2>
         <p>Descubre un lugar perfecto para tus eventos y reuniones.</p>
-        <a href="#" class="cta-button">Ver Quintas Disponibles</a>
+        <a href="galeria.html" class="cta-button">Ver Quintas Disponibles</a>
     </section>
 
     <section class="about">
         <h2>Acerca de Nosotros</h2>
-        <p>Somos una empresa dedicada a ofrecer quintas hermosas para alquiler en eventos especiales. Nuestros espacios están diseñados para brindarte la mejor experiencia.</p>
+        <p>Somos una empresa dedicada a ofrecer quintas hermosas para alquiler en eventos especiales. Nuestros espacios están diseñados para brindarte la mejor experiencia.
+            Nuestras quintas ofrecen una variedad de espacios versátiles para adaptarse a cualquier ocasión. 
+            Desde elegantes salones interiores hasta áreas al aire libre con vistas impresionantes, 
+            puedes personalizar tu evento según tus necesidades y preferencias.
+        </p>
+        
     </section>
 
     <section class="contact">
@@ -37,10 +42,31 @@
             <p>Email: info@quintasenalquiler.com</p>
             <p>Teléfono: +123 456 789</p>
         </address>
+        <section class="pago">
+            <img src="img/servicios/medios-de-pago.png" alt="medios de pago">
+        </section>          
     </section>
 
-    <footer>
-        <p>&copy; 2023 Quintas en Alquiler</p>
+    <footer class="contenedor-footer">
+        <div class="informacion-footer">
+            <div class="iconos-footer">
+                <h3>Quintas en alquiler</h3>
+                <div class="iconos-footer">
+                    <a href=""><img src="./iconos/facebook.svg" alt=""></a>
+                    <a href=""><img src="./iconos/instagram.svg" alt=""></a>
+                    <a href=""><img src="./iconos/twitter.svg" alt=""></a>
+                    <a href=""><img src="./iconos/whatsapp.svg" alt=""></a>
+                </div>
+            </div>
+            <div class="lista-footer">
+                <ul class="lista-fo">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="galeria.html">Alquiler</a></li>
+                    <li><a href="Servicios.html">Servicios y Tarifas</a></li>
+                    <li><a href="Contacto.html">Contactanos</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
