--- a/Proyecto 1/Serviciosytarifas.html
+++ b/Proyecto 1/Serviciosytarifas.html
@@ -12,7 +12,7 @@
     <ul>
      <li><a href="index.html">Inicio</a></li>
      <li><a href="galeria.html">Quintas Disponibles</a></li>
-     <li><a href="Servicios.html">Servicios y Tarifas</a></li>
+     <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
      <li><a href="Contacto.html">Contacto</a></li>
     </ul>
     </nav>
@@ -90,7 +90,7 @@
                 <ul class="lista-fo">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="galeria.html">Alquiler</a></li>
-                    <li><a href="Servicios.html">Servicios y Tarifas</a></li>
+                    <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
                     <li><a href="Contacto.html">Contactanos</a></li>
                 </ul>
             </div>
