--- a/Proyecto 1/galeria.html
+++ b/Proyecto 1/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/galeria.css">
     <title>Galeria</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <button class="cta-button" onclick="openAside()"><img src="./iconos/icons8-menú-64.png" alt=""></button>
+    <button class="boton-aside" onclick="openAside()"><img src="./iconos/icons8-menú-64.png" alt=""></button>
     <aside class="contenedor-aside esconder" id="abierto_cerrar">
         <div class="contenedor-dat">
             <div class="form-dat">
@@ -505,7 +505,7 @@
         <div class="informacion-footer">
             <div class="iconos-footer">
                 <h3>Quintas en alquiler</h3>
-                <div class="iconos-footer">
+                <div class="icono-footer">
                     <a href=""><img src="./iconos/facebook.svg" alt=""></a>
                     <a href=""><img src="./iconos/instagram.svg" alt=""></a>
                     <a href=""><img src="./iconos/twitter.svg" alt=""></a>
@@ -513,7 +513,7 @@
                 </div>
             </div>
             <div class="lista-footer">
-                <ul class="lista-fo">
+                <ul class="lista-fo" id="pie">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="galeria.html">Alquiler</a></li>
                     <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
