--- a/Proyecto 1/index.html
+++ b/Proyecto 1/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quintas en Alquiler</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Quintas en Alquiler</h1>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Quintas Disponibles</a></li>
                 <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
@@ -49,13 +49,13 @@
 
     <footer class="contenedor-footer">
         <div class="informacion-footer">
-            <div class="iconos-footer">
+            <div class="icono-footer">
                 <h3>Quintas en alquiler</h3>
-                <div class="iconos-footer">
-                    <a href=""><img src="./iconos/facebook.svg" alt=""></a>
-                    <a href=""><img src="./iconos/instagram.svg" alt=""></a>
-                    <a href=""><img src="./iconos/twitter.svg" alt=""></a>
-                    <a href=""><img src="./iconos/whatsapp.svg" alt=""></a>
+                <div class="icono-footer">
+                    <a href="https://www.facebook.com/?locale=es_LA"><img src="./iconos/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="./iconos/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/?lang=es"><img src="./iconos/twitter.svg" alt=""></a>
+                    <a href="https://web.whatsapp.com/"><img src="./iconos/whatsapp.svg" alt=""></a>
                 </div>
             </div>
             <div class="lista-footer">
