--- a/Proyecto 1/Contacto.html
+++ b/Proyecto 1/Contacto.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quintas en Alquiler</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>          
   <header>
     <nav>
-        <ul>
+        <ul  class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="galeria.html">Quintas Disponibles</a></li>
             <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
@@ -72,11 +72,11 @@
   <div class="informacion-footer">
       <div class="iconos-footer">
         <h3>Quintas en alquiler</h3>
-          <div class="iconos-footer">
-              <a href=""><img src="./iconos/facebook.svg" alt=""></a>
-              <a href=""><img src="./iconos/instagram.svg" alt=""></a>
-              <a href=""><img src="./iconos/twitter.svg" alt=""></a>
-              <a href=""><img src="./iconos/whatsapp.svg" alt=""></a>
+          <div class="icono-footer">
+            <a href="https://www.facebook.com/?locale=es_LA"><img src="./iconos/facebook.svg" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="./iconos/instagram.svg" alt=""></a>
+            <a href="https://twitter.com/?lang=es"><img src="./iconos/twitter.svg" alt=""></a>
+            <a href="https://web.whatsapp.com/"><img src="./iconos/whatsapp.svg" alt=""></a>
           </div>
       </div>
       <div class="lista-footer">
@@ -89,6 +89,6 @@
       </div>
   </div>
 </footer>
-<script src="JavaScript.js"></script>
+<script src="js/JavaScript.js"></script>
 </body>
 </html>
