--- a/Proyecto 1/Serviciosytarifas.html
+++ b/Proyecto 1/Serviciosytarifas.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quintas en Alquiler</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <header>
     <nav>
-    <ul>
-     <li><a href="index.html">Inicio</a></li>
-     <li><a href="galeria.html">Quintas Disponibles</a></li>
-     <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
-     <li><a href="Contacto.html">Contacto</a></li>
-    </ul>
+        <ul class="menu">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="galeria.html">Quintas Disponibles</a></li>
+            <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
+            <li><a href="Contacto.html">Contacto</a></li>
+        </ul>
     </nav>
 </header>
 <!--
@@ -38,37 +38,37 @@
     <h2 class="titulo2">Tenemos varias propuestas para que elijas la mas conveniente para vos</h2>
 
     <section class="tarifas">
-    <section class="tarjetas">
-    <h3> Membresia por 12 meses</h3>
-        <dl>
-        <dt> Publicaremos tu anuncio por 12 meses</dt>
-        <dt> Aseoramiento y gestion personalizada </dt>
-        <dt> Servicio "Espacio Verificado" sin costo adicional</dt>
-        <dt> Publicacion Destacada </dt>
-        <dt> Reporte del trafico de visitas semanal </dt>
-        <dt> <b>Valor $24000.-</b></dt>
-        </dl>
-    </section>
-    <section class="tarjetas">
-     <h3> Membresia por 6 meses</h3>
-        <dl>
-        <dt> Publicaremos tu anuncio por 6 meses</dt>
-        <dt> Aseoramiento y gestion personalizada </dt>
-        <dt> Servicio "Espacio Verificado" con costo bonificado parcialmente</dt>
-        <dt> Publicacion Destacada dias de semana </dt>
-        <dt> <b>Valor $16000.-</b></dt>
-         </dl>
-     </section>
+        <section class="tarjetas">
+            <h3> Membresia por 12 meses</h3>
+                <dl>
+                <dt> Publicaremos tu anuncio por 12 meses</dt>
+                <dt> Aseoramiento y gestion personalizada </dt>
+                <dt> Servicio "Espacio Verificado" sin costo adicional</dt>
+                <dt> Publicacion Destacada </dt>
+                <dt> Reporte del trafico de visitas semanal </dt>
+                <dt> <b>Valor $24000.-</b></dt>
+                </dl>
+        </section>
+        <section class="tarjetas">
+            <h3> Membresia por 6 meses</h3>
+                <dl>
+                <dt> Publicaremos tu anuncio por 6 meses</dt>
+                <dt> Aseoramiento y gestion personalizada </dt>
+                <dt> Servicio "Espacio Verificado" con costo bonificado parcialmente</dt>
+                <dt> Publicacion Destacada dias de semana </dt>
+                <dt> <b>Valor $16000.-</b></dt>
+                </dl>
+        </section>
 
-    <section class="tarjetas">
-    <h3> Membresia por 3 meses</h3>
-     <dl>
-        <dt> Publicaremos tu anuncio por 3 meses</dt>
-        <dt> Aseoramiento y gestion personalizada </dt>
-        <dt> Servicio "Espacio Verificado" con costo</dt>
-        <dt> <b>Valor $9000.-</b></dt>
-    </dl>
-    </section>
+        <section class="tarjetas">
+            <h3> Membresia por 3 meses</h3>
+            <dl>
+                <dt> Publicaremos tu anuncio por 3 meses</dt>
+                <dt> Aseoramiento y gestion personalizada </dt>
+                <dt> Servicio "Espacio Verificado" con costo</dt>
+                <dt> <b>Valor $9000.-</b></dt>
+            </dl>
+        </section>
     </section>
 
     <section class="pago">
@@ -79,11 +79,11 @@
         <div class="informacion-footer">
             <div class="iconos-footer">  
                 <h3>Quintas en alquiler</h3>
-                <div class="iconos-footer">
-                    <a href=""><img src="./iconos/facebook.svg" alt=""></a>
-                    <a href=""><img src="./iconos/instagram.svg" alt=""></a>
-                    <a href=""><img src="./iconos/twitter.svg" alt=""></a>
-                    <a href=""><img src="./iconos/whatsapp.svg" alt=""></a>
+                <div class="icono-footer">
+                    <a href="https://www.facebook.com/?locale=es_LA"><img src="./iconos/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="./iconos/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/?lang=es"><img src="./iconos/twitter.svg" alt=""></a>
+                    <a href="https://web.whatsapp.com/"><img src="./iconos/whatsapp.svg" alt=""></a>
                 </div>
             </div>
             <div class="lista-footer">
