--- a/Proyecto 1/galeria.html
+++ b/Proyecto 1/galeria.html
@@ -506,10 +506,10 @@
             <div class="iconos-footer">
                 <h3>Quintas en alquiler</h3>
                 <div class="icono-footer">
-                    <a href=""><img src="./iconos/facebook.svg" alt=""></a>
-                    <a href=""><img src="./iconos/instagram.svg" alt=""></a>
-                    <a href=""><img src="./iconos/twitter.svg" alt=""></a>
-                    <a href=""><img src="./iconos/whatsapp.svg" alt=""></a>
+                    <a href="https://www.facebook.com/?locale=es_LA"><img src="./iconos/facebook.svg" alt=""></a>
+                    <a href="https://www.instagram.com/"><img src="./iconos/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/?lang=es"><img src="./iconos/twitter.svg" alt=""></a>
+                    <a href="https://web.whatsapp.com/"><img src="./iconos/whatsapp.svg" alt=""></a>
                 </div>
             </div>
             <div class="lista-footer">
