--- a/Proyecto 1/galeria.html
+++ b/Proyecto 1/galeria.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Quintas Disponibles</a></li>
                 <li><a href="Serviciosytarifas.html">Servicios y Tarifas</a></li>
