--- a/Proyecto 1/index.html
+++ b/Proyecto 1/index.html
@@ -49,7 +49,7 @@
 
     <footer class="contenedor-footer">
         <div class="informacion-footer">
-            <div class="icono-footer">
+            <div class="iconos-footer">
                 <h3>Quintas en alquiler</h3>
                 <div class="icono-footer">
                     <a href="https://www.facebook.com/?locale=es_LA"><img src="./iconos/facebook.svg" alt=""></a>
